--- a/Project/project_properties.html
+++ b/Project/project_properties.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- Created by: FAN HOI KIT, ID 301249275 on October 27, 2022-->
-<!--https://www.realtor.ca/agent/2055772/peter-papousek-125-lakeshore-road-east-mississauga-ontario-l5g1e5-->
 
 <head>
-    <title>FAN HOI KIT, Ivan - Home Page</title>
+    <title>FAN HOI KIT, Ivan - Properties Page</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../Project/style.css">
 </head>
@@ -42,14 +41,15 @@
     <div>
 
         <div class="navbar">
-            <div class="navbar-item"><a href="../index.html" target="_blank" class="button-type">Index</a></div>
+            <div class="navbar-item"><a href="../Project/project.html" class="button-type-a">Home</a></div>
             <div class="navbar-item"><a href="../Project/project_properties.html"
-                    class="button-type">Properties<sup>®</sup></a></div>
-            <div class="navbar-item"><a href="../Project/project_sitemap.html" class="button-type">Site
+                    class="button-type-a">Properties<sup>®</sup></a></div>
+            <div class="navbar-item"><a href="../Project/project_sitemap.html" class="button-type-a">Site
                     Map</a></div>
-            <div class="navbar-item"><a href="../Project/project_contact_form.html" class="button-type">Contact Form</a>
+            <div class="navbar-item"><a href="../Project/project_contact_form.html" class="button-type-a">Contact Form</a>
             </div>
-            <div class="navbar-last"><img src="../Project/images/searches.svg" class="search" alt="search"><img
+            <div class="navbar-last"><a href="../index.html" class="button-type-a"><img
+                        src="../Project/images/searches.svg" class="search" alt="search"></a><img
                     src="../Project/images/heart.svg" class="heart" alt="heart"></div>
         </div>
 
@@ -60,7 +60,7 @@
 
 
         <div class="listing-container">
-            <div class="agent"><span class="agent">Peter's Listings</span></div>
+            <div class="agent"><span class="agent">Ivan's Listings</span></div>
             <div class="listing-card-container">
                 <div class="listing-card-item">
                     <a href="../Project/project_house1.html" target="_blank" class="button-type">
@@ -83,8 +83,8 @@
                             <span class="small-text">RE/MAX REALTY ENTERPRISES INC.(LSE)</span>
                         </div>
                         <div class="listing-card-end">
-                            <span><img src="../Project/images/small-peter.jpg" class="card-image"
-                                    alt="small-peter"></span>
+                            <span><img src="../Project/images/ivan.jpg" class="card-image"
+                                    alt="small-ivan"></span>
                             <span></span>
                             <span><img src="../Project/images/reimax.jpg" alt="RE/MAX"></span>
                         </div>
@@ -111,8 +111,8 @@
                             <span class="small-text">RE/MAX REALTY ENTERPRISES INC.(LSE)</span>
                         </div>
                         <div class="listing-card-end">
-                            <span><img src="../Project/images/small-peter.jpg" class="card-image"
-                                    alt="small-peter"></span>
+                            <span><img src="../Project/images/ivan.jpg" class="card-image"
+                                    alt="small-ivan"></span>
                             <span></span>
                             <span><img src="../Project/images/reimax.jpg" alt="RE/MAX"></span>
                         </div>
@@ -139,8 +139,8 @@
                             <span class="small-text">RE/MAX REALTY ENTERPRISES INC.(LSE)</span>
                         </div>
                         <div class="listing-card-end">
-                            <span><img src="../Project/images/small-peter.jpg" class="card-image"
-                                    alt="small-peter"></span>
+                            <span><img src="../Project/images/ivan.jpg" class="card-image"
+                                    alt="small-ivan"></span>
                             <span></span>
                             <span><img src="../Project/images/reimax.jpg" alt="RE/MAX"></span>
                         </div>
@@ -174,8 +174,8 @@
                             <span class="small-text">RE/MAX REALTY ENTERPRISES INC.(LSE)</span>
                         </div>
                         <div class="listing-card-end">
-                            <span><img src="../Project/images/small-peter.jpg" class="card-image"
-                                    alt="small-peter"></span>
+                            <span><img src="../Project/images/ivan.jpg" class="card-image"
+                                    alt="small-ivan"></span>
                             <span></span>
                             <span><img src="../Project/images/reimax.jpg" alt="RE/MAX"></span>
                         </div>
@@ -202,8 +202,8 @@
                             <span class="small-text">RE/MAX REALTY ENTERPRISES INC.(LSE)</span>
                         </div>
                         <div class="listing-card-end">
-                            <span><img src="../Project/images/small-peter.jpg" class="card-image"
-                                    alt="small-peter"></span>
+                            <span><img src="../Project/images/ivan.jpg" class="card-image"
+                                    alt="small-ivan"></span>
                             <span></span>
                             <span><img src="../Project/images/reimax.jpg" alt="RE/MAX"></span>
                         </div>
@@ -230,8 +230,8 @@
                             <span class="small-text">RE/MAX REALTY ENTERPRISES INC.(LSE)</span>
                         </div>
                         <div class="listing-card-end">
-                            <span><img src="../Project/images/small-peter.jpg" class="card-image"
-                                    alt="small-peter"></span>
+                            <span><img src="../Project/images/ivan.jpg" class="card-image"
+                                    alt="smallivan"></span>
                             <span></span>
                             <span><img src="../Project/images/reimax.jpg" alt="RE/MAX"></span>
                         </div>
@@ -241,7 +241,6 @@
             </div>
         </div>
 
-
         <footer>
 
             <div class="footer-container-a">
@@ -250,7 +249,19 @@
                 <span>final project</span>
             </div>
             <div class="footer-container-b">
-
+                <span class="footer-container-b-item-a">For academic purpose only
+                    <span class="space"></span>
+                    <img src="../Project/images/apple_app_store.svg" alt="apple">
+                    <span class="space">
+                    </span><img src="../Project/images/google_play.svg" alt="google">
+                </span>
+                <span class="footer-container-b-item-b">Stay Connected
+                    <span class="space"></span>
+                    <img src="../Project/images/icon-facebook-transparent.svg" class="social-logo" alt="fb">
+                    <img src="../Project/images/icon-instagram-transparent.svg" class="social-logo" alt="instagram">
+                    <img src="../Project/images/icon-pinterest-transparent.svg" class="social-logo" alt="pin">
+                    <img src="../Project/images/icon-twitter-transparent.svg" class="social-logo" alt="twitter">
+                </span>
             </div>
             <h5>&copy; Copyright FAN HOI KIT - ID: 301249275 - COMP213 - Fall 2022</h5>
         </footer>
