--- a/Project/template.html
+++ b/Project/template.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- Created by: FAN HOI KIT, ID 301249275 on October 27, 2022-->
-<!--https://www.realtor.ca/agent/2055772/peter-papousek-125-lakeshore-road-east-mississauga-ontario-l5g1e5-->
-
 <head>
     <title>FAN HOI KIT, Ivan - Home Page</title>
     <meta charset="utf-8">
@@ -42,14 +40,15 @@
     <div>
 
         <div class="navbar">
-            <div class="navbar-item"><a href="../index.html" target="_blank" class="button-type">Index</a></div>
+            <div class="navbar-item"><a href="../Project/project.html" class="button-type-a">Home</a></div>
             <div class="navbar-item"><a href="../Project/project_properties.html"
-                    class="button-type">Properties<sup>®</sup></a></div>
-            <div class="navbar-item"><a href="../Project/project_sitemap.html" class="button-type">Site
+                    class="button-type-a">Properties<sup>®</sup></a></div>
+            <div class="navbar-item"><a href="../Project/project_sitemap.html" class="button-type-a">Site
                     Map</a></div>
-            <div class="navbar-item"><a href="../Project/project_contact_form.html" class="button-type">Contact Form</a>
+            <div class="navbar-item"><a href="../Project/project_contact_form.html" class="button-type-a">Contact Form</a>
             </div>
-            <div class="navbar-last"><img src="../Project/images/searches.svg" class="search" alt="search"><img
+            <div class="navbar-last"><a href="../index.html" class="button-type-a"><img
+                        src="../Project/images/searches.svg" class="search" alt="search"></a><img
                     src="../Project/images/heart.svg" class="heart" alt="heart"></div>
         </div>
 
@@ -62,20 +61,19 @@
                 <span>final project</span>
             </div>
             <div class="footer-container-b">
-                <ul>
-                    <li><span>reference: <a class="footer-b"
-                                href="https://www.realtor.ca/agent/2055772/peter-papousek-125-lakeshore-road-east-mississauga-ontario-l5g1e5">https://www.realtor.ca/agent/2055772/peter-papousek-125-lakeshore-road-east-mississauga-ontario-l5g1e5</a></span>
-                    </li>
-                    <li><span>reference: <a class="footer-b"
-                                href="https://www.realtor.ca/real-estate/24911864/128-pinetree-way-mississauga">https://www.realtor.ca/real-estate/24911864/128-pinetree-way-mississauga</a></span>
-                    </li>
-                    <li><span>reference: <a class="footer-b"
-                                href="https://www.realtor.ca/real-estate/25088039/422-marf-avenue-mississauga">https://www.realtor.ca/real-estate/25088039/422-marf-avenue-mississauga</a></span>
-                    </li>
-                    <li><span>reference: <a class="footer-b"
-                                href="https://www.realtor.ca/real-estate/24894336/39-pine-valley-road-port-severn">https://www.realtor.ca/real-estate/24894336/39-pine-valley-road-port-severn</a></span>
-                    </li>
-                </ul>
+                <span class="footer-container-b-item-a">For academic purpose only
+                    <span class="space"></span>
+                    <img src="../Project/images/apple_app_store.svg" alt="apple">
+                    <span class="space">
+                    </span><img src="../Project/images/google_play.svg" alt="google">
+                </span>
+                <span class="footer-container-b-item-b">Stay Connected
+                    <span class="space"></span>
+                    <img src="../Project/images/icon-facebook-transparent.svg" class="social-logo" alt="fb">
+                    <img src="../Project/images/icon-instagram-transparent.svg" class="social-logo" alt="instagram">
+                    <img src="../Project/images/icon-pinterest-transparent.svg" class="social-logo" alt="pin">
+                    <img src="../Project/images/icon-twitter-transparent.svg" class="social-logo" alt="twitter">
+                </span>
             </div>
             <h5>&copy; Copyright FAN HOI KIT - ID: 301249275 - COMP213 - Fall 2022</h5>
         </footer>
