--- a/Project/project.html
+++ b/Project/project.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- Created by: FAN HOI KIT, ID 301249275 on October 27, 2022-->
-<!--https://www.realtor.ca/agent/2055772/peter-papousek-125-lakeshore-road-east-mississauga-ontario-l5g1e5-->
 
 <head>
     <title>FAN HOI KIT, Ivan - Home Page</title>
@@ -42,40 +41,40 @@
     <div>
 
         <div class="navbar">
-            <div class="navbar-item"><a href="../index.html" target="_blank" class="button-type">Index</a></div>
+            <div class="navbar-item"><a href="../Project/project.html" class="button-type-a">Home</a></div>
             <div class="navbar-item"><a href="../Project/project_properties.html"
-                    class="button-type">Properties<sup>®</sup></a></div>
-            <div class="navbar-item"><a href="../Project/project_sitemap.html" class="button-type">Site
+                    class="button-type-a">Properties<sup>®</sup></a></div>
+            <div class="navbar-item"><a href="../Project/project_sitemap.html" class="button-type-a">Site
                     Map</a></div>
-            <div class="navbar-item"><a href="../Project/project_contact_form.html" class="button-type">Contact Form</a>
+            <div class="navbar-item"><a href="../Project/project_contact_form.html" class="button-type-a">Contact Form</a>
             </div>
-            <div class="navbar-last"><img src="../Project/images/searches.svg" class="search" alt="search"><img
+            <div class="navbar-last"><a href="../index.html" class="button-type-a"><img
+                        src="../Project/images/searches.svg" class="search" alt="search"></a><img
                     src="../Project/images/heart.svg" class="heart" alt="heart"></div>
         </div>
 
 
 
         <div class="agent-name">
-            <span class="agent">Peter Papousek</span>
+            <span class="agent">Ivan Fan</span>
         </div>
 
         <div class="grid-container">
             <div class="grid-item-left">
-                <div><img src="../Project/images/peter.jpg" alt="peter" class="peter">
-                    <p><span class="symbol">&#9990;</span> 905-990-5500<br><span class="symbol">&#9990;</span>
-                        905-278-0468</p>
+                <div><img src="../Project/images/ivan.jpg" alt="ivan" class="ivan">
+                    <p><span class="symbol">&#9990;</span> 911-911-1111<br><span class="symbol">&#9990;</span>
+                        922-222-2222</p>
                 </div>
                 <div class="vertical-container">
                     <div>
                         <p>
-                            <!--<span class="sales-name">Peter Papousek</span>-->
-                            <span class="sales-name">Peter Papousek</span>
+                            <span class="sales-name">Ivan Fan</span>
                             <br><span class="job">Salesperson</span>
                         </p>
                         <p><span class="location">Mississauga, Ontario</span></p>
                     </div>
                     <div class="mail-button">
-                        <a href="mailto:continuingeducation@centennialcollege.ca" target="_blank" class="mail">
+                        <a href="mailto:hfan15@my.centennialcollege.ca" target="_blank" class="mail">
                             &#x2709; Email
                         </a>
                     </div>
@@ -88,8 +87,8 @@
                     <img src="../Project/images/reimax.jpg" alt="RE/MAX">
                     <p>RE/MAX REALTY ENTERPRISES INC.(LSE)</p>
                     <p>125 Lakeshore Road East<br>Mississauga, Ontario L5G1E5</p>
-                    <p><span class="symbol">&#9990;</span> 905-278-3500<br><span class="symbol">&#9990;</span>
-                        905-278-0468<br>
+                    <p><span class="symbol">&#9990;</span> 933-333-3333<br><span class="symbol">&#9990;</span>
+                        944-444-4444<br>
                         <a href="../index.html" class="index-html"><span class="symbol">&#x21bb; </span><span> Office
                                 Website</span></a>
                     </p>
@@ -98,7 +97,55 @@
         </div>
 
         <div class="listing-container">
-            <div class="agent"><span class="agent">Peter's Listings</span></div>
+            <table>
+                <tr>
+                    <th class="title" colspan="2">Miscellaneous</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <td colspan="4" class="category">Ivan's Statement</td>
+                </tr>
+                <tr>
+                    <td class="house-last">Provide the best service to the customers</td>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
+                </tr>
+            </table>
+        </div>
+
+        <div class="listing-container">
+            <table>
+                <tr>
+                    <th class="title" colspan="2">Former's Customers Feedback</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <td colspan="4" class="category">Tom</td>
+                </tr>
+                <tr>
+                    <td class="house-last">Ivan has the most updated information</td>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
+                </tr>
+                <tr>
+                    <td colspan="4" class="category">Donald</td>
+                </tr>
+                <tr>
+                    <td class="house-last">Ivan is a hard-working person</td>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
+                </tr>
+            </table>
+        </div>
+
+
+        <div class="listing-container">
+            <div class="agent"><span class="agent">Ivan's Listings</span></div>
             <div class="listing-card-container">
                 <div class="listing-card-item">
                     <a href="../Project/project_house1.html" target="_blank" class="button-type">
@@ -121,8 +168,8 @@
                             <span class="small-text">RE/MAX REALTY ENTERPRISES INC.(LSE)</span>
                         </div>
                         <div class="listing-card-end">
-                            <span><img src="../Project/images/small-peter.jpg" class="card-image"
-                                    alt="small-peter"></span>
+                            <span><img src="../Project/images/ivan.jpg" class="card-image"
+                                    alt="small-ivan"></span>
                             <span></span>
                             <span><img src="../Project/images/reimax.jpg" alt="RE/MAX"></span>
                         </div>
@@ -149,8 +196,106 @@
                             <span class="small-text">RE/MAX REALTY ENTERPRISES INC.(LSE)</span>
                         </div>
                         <div class="listing-card-end">
-                            <span><img src="../Project/images/small-peter.jpg" class="card-image"
-                                    alt="small-peter"></span>
+                            <span><img src="../Project/images/ivan.jpg" class="card-image"
+                                    alt="small-ivan"></span>
+                            <span></span>
+                            <span><img src="../Project/images/reimax.jpg" alt="RE/MAX"></span>
+                        </div>
+                    </a>
+                </div>
+                <div class="listing-card-item">
+                    <a href="../Project/project_house3.html" target="_blank" class="button-type">
+                        <div class="like"><img src="../Project/images/heart-empty.svg" alt="heart-empty"
+                                class="heart-empty"></div>
+                        <span class="img-center"><img src="../Project/images/house3.jpg" alt="house3"></span>
+                        <div class="address">
+                            <span class="house-price">$3,999,000<br>
+                            </span>
+                            <span>39 PINE VALLEY Road, Port Severn, Ontario </span>
+                        </div>
+                        <div class="information">
+                            <span class="information-item white"> 3+1 <img src="../Project/images/bed-white.svg"
+                                    alt="bedroom" class="bedroom white"><br><span
+                                    class="small-text white">Bedrooms</span></span>
+                            <span class=""> </span>
+                            <span class="information-item white"> 2 <img src="../Project/images/bath-white.svg"
+                                    alt="bathroom" class="bedroom"><br><span
+                                    class="small-text white">Bathrooms</span></span>
+                        </div>
+                        <div class="company-name">
+                            <span class="small-text">RE/MAX REALTY ENTERPRISES INC.(LSE)</span>
+                        </div>
+                        <div class="listing-card-end">
+                            <span><img src="../Project/images/ivan.jpg" class="card-image"
+                                    alt="small-ivan"></span>
+                            <span></span>
+                            <span><img src="../Project/images/reimax.jpg" alt="RE/MAX"></span>
+                        </div>
+                    </a>
+                </div>
+
+            </div>
+            <div class="viewall-button">
+                <a href="../Project/project_properties.html" target="_blank" class="mail">
+                    View All
+                </a>
+            </div>
+        </div>
+
+        <div class="listing-container">
+            <div class="agent"><span class="agent">RE/MX's Listings</span></div>
+            <div class="listing-card-container">
+                <div class="listing-card-item">
+                    <a href="../Project/project_house1.html" target="_blank" class="button-type">
+                        <div class="like"><img src="../Project/images/heart-empty.svg" alt="heart-empty"
+                                class="heart-empty"></div>
+                        <span class="img-center"><img src="../Project/images/house1.jpeg" alt="house1"></span>
+                        <div class="address">
+                            <span class="house-price">$1,699,850<br>
+                            </span>
+                            <span>128 PINETREE Way, Mississauga, Ontario</span>
+                        </div>
+                        <div class="information">
+                            <span class="information-item"> 3+1 <img src="../Project/images/bed-gray.svg" alt="bedroom"
+                                    class="bedroom"><br><span class="small-text">Bedrooms</span></span>
+                            <span class=""> </span>
+                            <span class="information-item"> 2 <img src="../Project/images/bath-gray.svg" alt="bathroom"
+                                    class="bedroom"><br><span class="small-text">Bathrooms</span></span>
+                        </div>
+                        <div class="company-name">
+                            <span class="small-text">RE/MAX REALTY ENTERPRISES INC.(LSE)</span>
+                        </div>
+                        <div class="listing-card-end">
+                            <span><img src="../Project/images/ivan.jpg" class="card-image"
+                                    alt="small-ivan"></span>
+                            <span></span>
+                            <span><img src="../Project/images/reimax.jpg" alt="RE/MAX"></span>
+                        </div>
+                    </a>
+                </div>
+                <div class="listing-card-item">
+                    <a href="../Project/project_house2.html" target="_blank" class="button-type">
+                        <div class="like"><img src="../Project/images/heart-empty.svg" alt="heart-empty"
+                                class="heart-empty"></div>
+                        <span class="img-center"><img src="../Project/images/house2.jpg" alt="house2"></span>
+                        <div class="address">
+                            <span class="house-price">$2,649,850<br>
+                            </span>
+                            <span>422 MARF Avenue, Mississauga, Ontario </span>
+                        </div>
+                        <div class="information">
+                            <span class="information-item"> 4+2 <img src="../Project/images/bed-gray.svg" alt="bedroom"
+                                    class="bedroom"><br><span class="small-text">Bedrooms</span></span>
+                            <span class=""> </span>
+                            <span class="information-item"> 6 <img src="../Project/images/bath-gray.svg" alt="bathroom"
+                                    class="bedroom"><br><span class="small-text">Bathrooms</span></span>
+                        </div>
+                        <div class="company-name">
+                            <span class="small-text">RE/MAX REALTY ENTERPRISES INC.(LSE)</span>
+                        </div>
+                        <div class="listing-card-end">
+                            <span><img src="../Project/images/ivan.jpg" class="card-image"
+                                    alt="small-ivan"></span>
                             <span></span>
                             <span><img src="../Project/images/reimax.jpg" alt="RE/MAX"></span>
                         </div>
@@ -177,8 +322,36 @@
                             <span class="small-text">RE/MAX REALTY ENTERPRISES INC.(LSE)</span>
                         </div>
                         <div class="listing-card-end">
-                            <span><img src="../Project/images/small-peter.jpg" class="card-image"
-                                    alt="small-peter"></span>
+                            <span><img src="../Project/images/ivan.jpg" class="card-image"
+                                    alt="small-ivan"></span>
+                            <span></span>
+                            <span><img src="../Project/images/reimax.jpg" alt="RE/MAX"></span>
+                        </div>
+                    </a>
+                </div>
+                <div class="listing-card-item">
+                    <a href="../Project/project_house3.html" target="_blank" class="button-type">
+                        <div class="like"><img src="../Project/images/heart-empty.svg" alt="heart-empty"
+                                class="heart-empty"></div>
+                        <span class="img-center"><img src="../Project/images/house3.jpg" alt="house3"></span>
+                        <div class="address">
+                            <span class="house-price">$3,999,000<br>
+                            </span>
+                            <span>39 PINE VALLEY Road, Port Severn, Ontario </span>
+                        </div>
+                        <div class="information">
+                            <span class="information-item white"> 3+1 <img src="../Project/images/bed-white.svg" alt="bedroom"
+                                    class="bedroom white"><br><span class="small-text white">Bedrooms</span></span>
+                            <span class=""> </span>
+                            <span class="information-item white"> 2 <img src="../Project/images/bath-white.svg" alt="bathroom"
+                                    class="bedroom"><br><span class="small-text white">Bathrooms</span></span>
+                        </div>
+                        <div class="company-name">
+                            <span class="small-text">RE/MAX REALTY ENTERPRISES INC.(LSE)</span>
+                        </div>
+                        <div class="listing-card-end">
+                            <span><img src="../Project/images/ivan.jpg" class="card-image"
+                                    alt="small-ivan"></span>
                             <span></span>
                             <span><img src="../Project/images/reimax.jpg" alt="RE/MAX"></span>
                         </div>
@@ -186,15 +359,7 @@
                 </div>
 
             </div>
-            <div class="viewall-button">
-                <a href="../Project/project_properties.html" target="_blank" class="mail">
-                    View All
-                </a>
-            </div>
         </div>
-
-
-
 
 
 
@@ -206,7 +371,19 @@
                 <span>final project</span>
             </div>
             <div class="footer-container-b">
-    
+                <span class="footer-container-b-item-a">For academic purpose only
+                    <span class="space"></span>
+                    <img src="../Project/images/apple_app_store.svg" alt="apple">
+                    <span class="space">
+                    </span><img src="../Project/images/google_play.svg" alt="google">
+                </span>
+                <span class="footer-container-b-item-b">Stay Connected
+                    <span class="space"></span>
+                    <img src="../Project/images/icon-facebook-transparent.svg" class="social-logo" alt="fb">
+                    <img src="../Project/images/icon-instagram-transparent.svg" class="social-logo" alt="instagram">
+                    <img src="../Project/images/icon-pinterest-transparent.svg" class="social-logo" alt="pin">
+                    <img src="../Project/images/icon-twitter-transparent.svg" class="social-logo" alt="twitter">
+                </span>
             </div>
             <h5>&copy; Copyright FAN HOI KIT - ID: 301249275 - COMP213 - Fall 2022</h5>
         </footer>
