--- a/Project/project_house1.html
+++ b/Project/project_house1.html
@@ -3,7 +3,7 @@
 <!-- Created by: FAN HOI KIT, ID 301249275 on October 27, 2022-->
 
 <head>
-    <title>FAN HOI KIT, Ivan - Home Page</title>
+    <title>FAN HOI KIT, Ivan - House 1 Page</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../Project/style.css">
 </head>
@@ -41,14 +41,16 @@
 
     <div>
         <div class="navbar">
-            <div class="navbar-item"><a href="../index.html" target="_blank" class="button-type">Index</a></div>
+            <div class="navbar-item"><a href="../Project/project.html" class="button-type-a">Home</a></div>
             <div class="navbar-item"><a href="../Project/project_properties.html"
-                    class="button-type">Properties<sup>®</sup></a></div>
-            <div class="navbar-item"><a href="../Project/project_sitemap.html" class="button-type">Site
+                    class="button-type-a">Properties<sup>®</sup></a></div>
+            <div class="navbar-item"><a href="../Project/project_sitemap.html" class="button-type-a">Site
                     Map</a></div>
-            <div class="navbar-item"><a href="../Project/project_contact_form.html" class="button-type">Contact Form</a>
+            <div class="navbar-item"><a href="../Project/project_contact_form.html" class="button-type-a">Contact
+                    Form</a>
             </div>
-            <div class="navbar-last"><img src="../Project/images/searches.svg" class="search" alt="search"><img
+            <div class="navbar-last"><a href="../index.html" class="button-type-a"><img
+                        src="../Project/images/searches.svg" class="search" alt="search"></a><img
                     src="../Project/images/heart.svg" class="heart" alt="heart"></div>
         </div>
 
@@ -133,7 +135,6 @@
                 <tr>
                     <td class="house-last"><b>Above Grade</b><br>3</td>
                     <td><b>Below Grade</b><br>1</td>
-
                 </tr>
                 <tr>
                     <td colspan="4" class="category">Bathrooms</td>
@@ -214,24 +215,31 @@
                     <td class="house-last"><b>Access</b><br>Highway access</td>
                     <td><b>Zoning Description</b><br>R2</td>
                 </tr>
-
             </table>
         </div>
 
 
-
-
-
-
-
         <footer>
+
             <div class="footer-container-a">
                 <span>Give me A+</span>
                 <span>static website</span>
                 <span>final project</span>
             </div>
             <div class="footer-container-b">
-
+                <span class="footer-container-b-item-a">For academic purpose only
+                    <span class="space"></span>
+                    <img src="../Project/images/apple_app_store.svg" alt="apple">
+                    <span class="space">
+                    </span><img src="../Project/images/google_play.svg" alt="google">
+                </span>
+                <span class="footer-container-b-item-b">Stay Connected
+                    <span class="space"></span>
+                    <img src="../Project/images/icon-facebook-transparent.svg" class="social-logo" alt="fb">
+                    <img src="../Project/images/icon-instagram-transparent.svg" class="social-logo" alt="instagram">
+                    <img src="../Project/images/icon-pinterest-transparent.svg" class="social-logo" alt="pin">
+                    <img src="../Project/images/icon-twitter-transparent.svg" class="social-logo" alt="twitter">
+                </span>
             </div>
             <h5>&copy; Copyright FAN HOI KIT - ID: 301249275 - COMP213 - Fall 2022</h5>
         </footer>
